[package]
name = "oqueue"
version = "0.1.6"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["concurrency"]
description = "Non-interleaving multithreaded output queue"
documentation = "https://docs.rs/oqueue"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/oqueue"
rust-version = "1.33"

[dependencies]
readonly = "0.2.10"
termcolor = "1.2"

[dev-dependencies]
num_cpus = "1.16"
rayon = "1.7"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
